fixing navbar collapse

--- a/src/css/guitarChordFinder.scss
+++ b/src/css/guitarChordFinder.scss
@@ -169,7 +169,7 @@ form {
 @media (min-width: 767px) {
   .underH1 {
     font-size: 19px;
-    top: -105px;
+    top: -81px;
   }
   .textBox {
     padding: 2rem 5rem 0rem 5rem;
@@ -178,7 +178,7 @@ form {
     font-size: 1.5em;
   }
   .ChordFinderTitleBox {
-    height: 14vh;
+    height: 16vh;
   }
 }
 
@@ -248,6 +248,6 @@ form {
     height: 19vh;
   } */
   .underH1 {
-    top: -102px;
+    top: -100px;
   }
 }
